<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_edit_text"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/name"
        android:layout_marginStart="24dp"
        app:layout_constraintDimensionRatio="w,5:1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        app:layout_constraintBaseline_toBaselineOf="@+id/surname_edit_text"
        app:layout_constraintLeft_toLeftOf="@+id/name" />

    <EditText
        android:id="@+id/surname_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/surname_hint"
        app:layout_constraintDimensionRatio="w,5:1"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
        app:layout_constraintLeft_toLeftOf="@+id/name_edit_text"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/name_edit_text" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:text="@string/phone_number"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_edit_text" />

    <Spinner
        android:id="@+id/country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="21dp"
        android:spinnerMode="dialog"
        app:layout_constraintLeft_toRightOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/surname_edit_text" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:ems="5"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone"
        app:layout_constraintLeft_toRightOf="@+id/country_code"
        android:layout_marginEnd="0dp"
        android:hint="1234567890"
        app:layout_constraintRight_toRightOf="@+id/name_edit_text"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginRight="0dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/e_mail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:hint="@string/email_hint"
        android:ems="5"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/email"
        app:layout_constraintDimensionRatio="w,5:1"
        app:layout_constraintLeft_toLeftOf="@+id/surname_edit_text"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/name_edit_text" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_as_person"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_from_contact"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>