<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alperenkantarci.alertbutton.MainActivity">

    <ImageView
        android:layout_width="285dp"
        android:layout_height="319dp"
        android:visibility="visible"
        android:id="@+id/alarm_button"
        app:srcCompat="@drawable/photo1"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_person"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/main_add_button"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_people"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:id="@+id/list_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_button"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/main_add_button"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/main_add_button" />
</android.support.constraint.ConstraintLayout>
